<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161513"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_top_bg"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/data_edit"
                android:textColor="@color/ivory"
                android:textSize="@dimen/title_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="start" >

            <Button
                android:id="@+id/dataedit_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
            android:background="@drawable/button_back_selector" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_horizontal_margin"
        android:background="@drawable/dataedit_bg" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="0" >

            <TableRow
                android:id="@+id/dataedit_nickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_option_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/nick_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dataedit_nickname_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:gravity="end|center_vertical"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/dataedit_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_option_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/gender"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dataedit_gender_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:gravity="end|center_vertical"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/dataedit_area"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_option_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/area"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dataedit_area_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:gravity="end|center_vertical"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_horizontal_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dataedit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel1"
            android:textColor="@color/ivory" />

        <Button
            android:id="@+id/dataedit_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/ivory" />
    </LinearLayout>

</LinearLayout>