<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menu_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/menu_login_height"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/main_user_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center_vertical" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_bg1"
                android:gravity="center_vertical" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/menu_horizontal_margin"
        android:layout_marginRight="@dimen/menu_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="fill_parent"
                android:background="@drawable/menu_option_selector"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_icon_vertical_margin"
                    android:layout_marginBottom="@dimen/menu_icon_vertical_margin"
                    android:layout_gravity="center"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/main_user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/menu_text_vertical_margin"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/main_draftbox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_option_selector">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_icon_vertical_margin"
                    android:layout_marginBottom="@dimen/menu_icon_vertical_margin"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_draft"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/main_draftbox_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/menu_text_vertical_margin"
                    android:gravity="center"
                    android:text="@string/draft_box"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/main_searchfriends"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_option_selector">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_icon_vertical_margin"
                    android:layout_marginBottom="@dimen/menu_icon_vertical_margin"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_friends"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/main_searchfriends_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/menu_text_vertical_margin"
                    android:gravity="center"
                    android:text="@string/search_friends"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:id="@+id/main_user_radar"
                android:layout_width="fill_parent"
                android:background="@drawable/menu_option_selector"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_icon_vertical_margin"
                    android:layout_marginBottom="@dimen/menu_icon_vertical_margin"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_radar"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/main_user_radar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/menu_text_vertical_margin"
                    android:gravity="center"
                    android:text="@string/radar"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/main_shake"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_option_selector">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_icon_vertical_margin"
                    android:layout_marginBottom="@dimen/menu_icon_vertical_margin"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_shake"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/main_shake_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/menu_text_vertical_margin"
                    android:gravity="center"
                    android:text="@string/shake"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:id="@+id/main_user_scan"
                android:layout_width="fill_parent"
                android:background="@drawable/menu_option_selector"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_icon_vertical_margin"
                    android:layout_marginBottom="@dimen/menu_icon_vertical_margin"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_scan"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/main_user_scan_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/menu_text_vertical_margin"
                    android:gravity="center"
                    android:text="@string/scan"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:id="@+id/main_setting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_option_selector">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/menu_icon_vertical_margin"
                    android:layout_marginBottom="@dimen/menu_icon_vertical_margin"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_setting"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/main_setting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/menu_text_vertical_margin"
                    android:gravity="center"
                    android:text="@string/action_settings"
                    android:textSize="18sp" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <TableRow
            android:id="@+id/main_logout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/menu_option_noline_selector">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/icon_signout"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/logout"
                android:textSize="18sp" />

        </TableRow>
    </LinearLayout>
</LinearLayout>