<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_top_bg"
        android:gravity="center" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/feedback"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/ivory" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="start" >

            <Button
                android:id="@+id/feedback_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_back_selector"
                android:gravity="center" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/feedback_message_edt"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@drawable/edittext_selector"
                android:gravity="start"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="0" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/ivory"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/feedback_email_edt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_selector"
                        android:singleLine="true"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobilephone"
                        android:textColor="@color/ivory"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/feedback_mobilephone_edt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_selector"
                        android:singleLine="true"
                        android:textColor="@color/black" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="11dp"
                        android:text="@string/QQ"
                        android:textColor="@color/ivory"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/feedback_qq_edt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_selector"
                        android:singleLine="true"
                        android:textColor="@color/black" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/feedback_send"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/send"
            android:textColor="@color/ivory" />
    </LinearLayout>

</LinearLayout>