<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bottom_bg"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/share"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/ivory" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical">

            <Button
                android:id="@+id/publicvideo_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_back_selector"
                android:gravity="center" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/publicvideo_img"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/publicvideo_edt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/edittext_selector"
            android:gravity="start"
            android:hint="描述一下这个视频吧..." />
    </LinearLayout>

    <TableRow
        android:id="@+id/publicvideo_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/menu_option_noline_selector"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/icon_location"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/publicvideo_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/location"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:id="@+id/publicvideo_addlabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/menu_option_noline_selector"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/icon_add"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/label"
            android:textSize="18sp" />
    </TableRow>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="同步到"
            android:textSize="18sp"
            android:textColor="@color/ivory" />

        <Button
            android:id="@+id/publicvideo_share_qq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:layout_marginTop="5dp"
            android:text="腾讯QQ"
            android:textSize="18sp"
            android:textColor="@color/ivory" />

        <Button
            android:id="@+id/publicvideo_share_weixin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:layout_marginTop="5dp"
            android:text="微信"
            android:textSize="18sp"
            android:textColor="@color/ivory" />

        <Button
            android:id="@+id/publicvideo_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:layout_marginTop="15dp"
            android:text="分享"
            android:textSize="18sp"
            android:textColor="@color/ivory" />
    </LinearLayout>

    <EditText
        android:id="@+id/publicvideo_api"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="http://" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/publicvideo_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/ivory" />
    </ScrollView>

</LinearLayout>